@@ -4,6 +4,7 @@
 + Recalculating vertex IDs now works with a small distance allowed between vertices, allowing to properly recalculate for sloppy EA meshes.
 + Users can adjust said margin between 0.1 and 0.0 (default 0.00001)
 + Users can reset said margin back to it's default value(0.00001) with the 'Reset' button under 'Vertex IDs'
++ Users can adjust the maximum allowed bones on export in case I'm wrong about it being 63. (default: 63)
 
 
 # v2.1.1
